Adicionado muita coisa

--- a/index.html
+++ b/index.html
@@ -1,9 +1,144 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfólio</title>
+    <title>Portfólio | Victor Fernando</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <img
+        src="assents\imagens\eu 4x4.jpeg"
+        class="profile-img"
+        alt="Victor Fernando"
+      />
+      <h1>Victor Fernando</h1>
+      <p class="subtitle">Desenvolvedor Full-Stack em evolução</p>
+    </header>
+
+    <main class="container">
+      <!-- SOBRE -->
+      <section>
+        <h2>Sobre</h2>
+        <p>
+          Sou formado em Análise e Desenvolvimento de Sistemas e atualmente
+          curso Sistemas da Informação. Tenho experiência com desenvolvimento
+          web, bancos de dados, IA, automação e suporte técnico. Busco evoluir
+          como desenvolvedor Full-Stack, aplicando criatividade, lógica e
+          aprendizado contínuo.
+        </p>
+      </section>
+
+      <!-- EDUCAÇÃO -->
+      <section>
+        <h2>Educação</h2>
+        <ul>
+          <li>
+            <strong>Sistemas da Informação (Estácio)</strong> – Em andamento
+          </li>
+          <li><strong>Análise e Desenvolvimento de Sistemas</strong> – 2024</li>
+          <li><strong>Técnico em Informática – JRD</strong></li>
+        </ul>
+      </section>
+
+      <!-- LÍNGUAS -->
+      <section>
+        <h2>Línguas</h2>
+        <ul>
+          <li>Português – Nativo</li>
+          <li>Inglês – Técnico (UFCE)</li>
+        </ul>
+      </section>
+
+      <!-- CONTATOS -->
+      <section>
+        <h2>Contatos</h2>
+        <ul>
+          <li>Email: victorsena004@gmail.com</li>
+          <li>LinkedIn: linkedin.com/in/victor-fs-tech/</li>
+          <li>GitHub: github.com/VicFe</li>
+        </ul>
+      </section>
+
+      <!-- EXPERIÊNCIA -->
+      <section>
+        <h2>Experiência</h2>
+
+        <div class="card">
+          <h3>Assistente Administrativo — Maxipay</h3>
+          <p>
+            Atendimento ao público, suporte administrativo, vendas e criação de
+            planilhas, websites e design.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Suporte Técnico — JRD</h3>
+          <p>
+            Monitoria de laboratório, suporte a computadores, redes e sistemas.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Desenvolvedor — Projeto Acadêmico</h3>
+          <p>Correção de bugs em Java, Spring Boot, Maven e bancos SQL.</p>
+        </div>
+      </section>
+
+      <!-- CONHECIMENTOS -->
+      <section>
+        <h2>Conhecimentos</h2>
+        <p>
+          JavaScript, Python, Java, PHP, C, HTML, CSS, GDScript, MySQL,
+          PostgreSQL, MongoDB, Git, GitHub, APIs REST, IA, Machine Learning
+          básico, Q-Learning, Algoritmos Genéticos, MDP.
+        </p>
+      </section>
+
+      <!-- PROJETOS -->
+      <section>
+        <h2>Projetos</h2>
+
+        <div class="project">
+          <h3>Rick and Morty Explorer</h3>
+          <a href="https://lnkd.in/d8fNUkX5">Site</a> •
+          <a href="https://lnkd.in/d4K8tDK4">Código</a>
+        </div>
+
+        <div class="project">
+          <h3>Algoritmo Genético</h3>
+          <a href="https://lnkd.in/darCC-P8">Site</a> •
+          <a href="https://lnkd.in/dBqNfRVb">Código</a>
+        </div>
+
+        <div class="project">
+          <h3>Classificador de Jogadores</h3>
+          <a href="https://lnkd.in/dRUMH-BF">Site</a> •
+          <a href="https://lnkd.in/dV5hYp9v">Código</a>
+        </div>
+
+        <div class="project">
+          <h3>Carro Autônomo — MDP</h3>
+          <a href="https://lnkd.in/d_SRmMhe">Site</a> •
+          <a href="https://lnkd.in/dbYWnkzy">Código</a>
+        </div>
+      </section>
+
+      <!-- JORNADA FULL STACK -->
+      <section>
+        <h2>Jornada Full-Stack</h2>
+        <p>
+          Repositório criado para registrar toda a evolução do grupo de estudos
+          em desenvolvimento full-stack. Inclui projetos front-end, back-end,
+          APIs, bancos de dados e trabalho colaborativo via GitHub.
+        </p>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>© 2025 — Desenvolvido por Victor Fernando</p>
+    </footer>
+  </body>
 </html>
